# mips-simulator

./: .gitignore  CMakeLists.txt  Instruction.cpp  MIPSParser.cpp  MipsParser.cpp  README.md  TODO  instruction.hpp  mips.cpp  mipsparser.cpp  mipsparser.hpp
assembly_files/: Credits.txt
include/: DataSegment.hpp  Globals.hpp  Helpers.hpp  MIPSParser.hpp
src/: Data.cpp  Data.hpp  DataSegment.cpp  Globals.cpp  Globals.hpp  Helpers.cpp  Helpers.hpp  Instruction.cpp  Instruction.hpp  MIPS.cpp  MIPS.hpp  MIPSParser.cpp  MIPSParser.hpp  MIPS_Instructions.txt
xnotes/: Pseudo_Instrucionts.txt
